# ruff-format-diff-converter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/ruff_format_diff_converter/: __init__.py
